...
      'To establish Post Offices and post Roads;',
      'To promote the Progress of Science and useful Arts, by securing for limited Times to Authors and Inventors the exclusive Right to their respective Writings and Discoveries;',
      'To constitute Tribunals inferior to the supreme Court;',
      'To define and punish Piracies and Felonies committed on the high Seas, and Offences against the Law of Nations;',
      'To declare War, grant Letters of Marque and Reprisal, and make Rules concerning Captures on Land and Water;',
      'To raise and support Armies, but no Appropriation of Money to that Use shall be for a longer Term than two Years;',
      'To provide and maintain a Navy;',
      'To make Rules for the Government and Regulation of the land and naval Forces;',
      'To provide for calling forth the Militia to execute the Laws of the Union, suppress Insurrections and repel Invasions;',
      'To provide for organizing, arming, and disciplining, the Militia, and for governing such Part of them as may be employed in the Service of the United States, reserving to the States respectively, the Appointment of the Officers, and the Authority of training the Militia according to the discipline prescribed by Congress;',
      'To exercise exclusive Legislation in all Cases whatsoever, over such District (not exceeding ten Miles square) as may, by Cession of particular States, and the Acceptance of Congress, become the Seat of the Government of the United States, and to exercise like Authority over all Places purchased by the Consent of the Legislature of the State in which the Same shall be, for the Erection of F
      'To make all Laws which shall be necessary and proper for carrying into Execution the foregoing Powers, and all other Powers vested by this Constitution in the Government of the United States, or in any Department or Officer thereof.',
    ];
...
                                                  TextButton(
                                                    onPressed: () {
                                                      Navigator.of(
                                                        context,
                                                      ).pop();
                                                    },
                                                    child: const Text('Close'),
                                                  ),
                                                ],
                                              );
                                            },
                                          );
                                        },
...
